# agentic-trader

./: .env  .env.example  .env_template  .gitignore  .pre-commit-config.yaml  Contributing.md  Meta5Login.txt  auto_runner.py  black.err.out  broker_volume.py  debug_bars.py  debug_plot.py  exposure.ps1  find_symbols.ps1  gitupload.ps1  guards.py  healthandmode.ps1  install.bat  manual_order.ps1  manual_order2.ps1  mypy.err.out  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.err.out  ruff.out  run_agent.bat  run_agent_v2_new.bat  run_agentv2.bat  run_auto.py  run_auto_guarded.py  run_auto_safe_wlogs.bat  run_debug_plot.ps1  run_server.py  start.bat  start_auto.bat  start_auto_relax.bat  start_auto_safe.bat  start_detached.bat  start_quiet.bat  (+4 more)
.github/workflows/: deploy.yml
agentic-trader-drop/: broker_volume.py
agentic-trader-drop/app/agents/: auto_decider.py
agentic-trader-drop/app/exec/: executor.py  executor_mt5.py
agentic-trader-drop/app/risk/: guards.py  risk.py
agentic-trader-drop/app/strategies/: equities_momentum.py  indices_momentum.py  xau_momentum.py
agentic-trader-drop/scripts/: run_agent.ps1
app/: config.py  main.py  main_force.pay.py  risk.py  schemas.py  symbol_info.ps1
app/Tools/: end_trade_logger.py  getcandles.py  mt5_diagnose.py  mt5history.py  testmt5.py  testmt5deal.py
app/agents/: __init__.py  auto_decider.py  meanrev.py  momentum.old.py
app/brokers/: mt5_client.py
app/exec/: executor.py  executor_mt5.py
app/market/: data.clean3009.py  data.py  datacleanandverfiied3009.py
app/monitor/: loss_monitor.py  trailing.py
app/risk/: guards.py  risk.py
app/scripts/: README.md  run_agent.ps1  run_agentv2.ps1
app/strategies/: __init__.py  bollinger_band_breakout.py  equities_momentum.py  fx_momentum.py  fx_momentum_v3.py  indices_momentum.py  indices_momentum_v2.py  macd_crossover.py  meanrev.py  momentum.py  stocks_momentum.py  xau_momentum.py  xau_momentum_v2.py
app/util/: indicators.py  mt5_bars.py  price_action.py  pricing.py  sizing.py  ta.py
logs/: last_trade_state.json
logs/fx/: fx.trades.csv
nssm/: config  set_nssm_svcs.ps1  set_nssm_svcs_log.ps1  set_nssm_svcs_log.ps1.old  set_single_log.ps1  set_svcs_resilience.ps1  start_stop_svcs.ps1  start_trading_svc.ps1  verify_log_settings.ps1
tools/: README-checklist.md  analyze_journal.py  backup_copy.ps1  backup_full.ps1  black.err.out  close_all.ps1  codecheck.ps1  decide_execute.ps1  decide_preview.ps1  execute.ps1  health.ps1  inspect_candles.ps1  inspect_candles_README.md  inspect_symbols.ps1  journal_today.ps1  manual_order_fx.ps1  manual_order_xau.ps1  mypy.err.out  positions.ps1  ruff.err.out  run-quality.ps1  symbol_info.py  test_get_rates.ps1
